Revision history for Perl extension ExtUtils::CBuilder.

0.07

 - Added the link_executable() method, which provides the ability to
   create standalone executables. [Alberto Manuel Brandao Simoes]


0.06  Mon Dec 27 22:51:36 CST 2004

 - Fixed a bug on Unix environments in which our work-around for
   shell-commands like "FOO=BAR cc" (which is supposed to be turned
   into "env FOO=BAR cc" to actually work) wasn't being called.

0.05  Wed Oct 13 23:09:09 CDT 2004

 - Fixed a bug in split_like_shell() in which leading whitespace was
   creating an empty word, manifesting as something like "gcc - no
   such file or directory" during tests. [Spotted by Warren L. Dodge]

 - Incorporate another split_like_shell() fix from Module::Build.

0.04  Sun Oct 10 00:31:08 CDT 2004

 - Changed the split_like_shell() method to use the shellwords()
   function from Text::ParseWords (a core module since 5.0), which
   does a much better job than the split() we were using.


0.03  Fri May 14 23:12:23 CDT 2004

 - Fixed minor problems with the Build.PL file, the module names
   should be quoted.

 - The VMS module declared itself with the wrong package name.


0.02  Fri Feb 20 10:17:40 CST 2004

 - Fixed a bug in .../Platform/Windows.pm, in which compile() was
   ignoring an 'include_dirs' argument.  [Randy Sims]

 - Fixed a bug in .../Platform/Windows.pm, in which output files were
   being created in the root directory \ when they should be created
   in the current directory. [Randy Sims]


0.01  Mon Jan 12 08:12:35 CST 2004

 - Original release, taken from Module::Build's C-building code, with
   patching help from Randy Sims.